Fix jumping elements on page load, fix example text position

--- a/gh-pages/example/css/stuck.css
+++ b/gh-pages/example/css/stuck.css
@@ -35,7 +35,7 @@ body {
   background-color: #fae300;
   color: #333;
   height: 75px;
-  padding-top: 12px;
+  padding-top: 23px;
 }
 
 .green {
